scrollbar hidden and lightbox fixes

--- a/dev/sass/_homepageBody.scss
+++ b/dev/sass/_homepageBody.scss
@@ -690,6 +690,7 @@
             transform: translateX(-50%);
             color: $colorSecondary2;
             width: 280px;
+            font-family: 'Noto Sans TC';
         }
 
         ul {
